--- a/site/index.html
+++ b/site/index.html
@@ -5,6 +5,6 @@
 	<title>Coursera Course</title>
 </head>
 <body>
-	<h1>Welcome to coursera</h1>
+	<h1>Welcome to coursera! It's a great day</h1>
 </body>
 </html>
